setting recycler view for firebase - code to clean up

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-database-ktx:19.3.0'
+
 
     // for exceeding number of library methods
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.9'
@@ -111,6 +113,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     // For control over item selection of both touch and mouse driven selection
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+    implementation "com.firebaseui:firebase-ui-firestore:6.3.0"
 
     // Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:26.5.0')
