--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.quokka">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Quokka">
-        <activity android:name=".logged.AddTaskActivity"></activity>
+        <activity android:name=".FullTaskActivity"></activity>
+        <activity android:name=".logged.AddTaskActivity" />
         <activity android:name=".unlogged.LogInActivity" />
         <activity android:name=".unlogged.SignUpActivity" />
         <activity
