--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,21 +11,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Quokka">
-        <activity android:name="com.app.quokka.tasks.FullShowTaskActivity"></activity>
-        <activity android:name="com.app.quokka.tasks.FullUserTaskActivity" />
-        <activity android:name="com.app.quokka.logged.UserProfileEditActivity" />
-        <activity android:name="com.app.quokka.tasks.FullTaskActivity" />
-        <activity android:name="com.app.quokka.logged.AddTaskActivity" />
-        <activity android:name="com.app.quokka.unlogged.LogInActivity" />
-        <activity android:name="com.app.quokka.unlogged.SignUpActivity" />
+        <activity android:name=".tasks.DoneTaskActivity"></activity>
+        <activity android:name=".logged.FinishedTasksActivity" />
+        <activity android:name=".tasks.FullShowTaskActivity" />
+        <activity android:name=".tasks.FullUserTaskActivity" />
+        <activity android:name=".logged.UserProfileEditActivity" />
+        <activity android:name=".tasks.FullTaskActivity" />
+        <activity android:name=".logged.AddTaskActivity" />
+        <activity android:name=".unlogged.LogInActivity" />
+        <activity android:name=".unlogged.SignUpActivity" />
         <activity
-            android:name="com.app.quokka.logged.UserProfileActivity"
+            android:name=".logged.UserProfileActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name="com.app.quokka.logged.UserHomePageActivity"
+            android:name=".logged.UserHomePageActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name="com.app.quokka.MainActivity"
+            android:name=".MainActivity"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
